Fix: Removed fixed widths to display better on small screens

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -109,7 +109,7 @@ nav h1 a {
 /* ====================== Map ====================== */
 #map {
   height: 20rem;
-  height: 35vh;
+  height: 50vh;
   width: 100%;
   background-color: #ccc;
 }
@@ -136,7 +136,7 @@ nav h1 a {
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
-  width: 200px;
+  /* width: 200px; */
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -144,18 +144,18 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 5px 0px 5px;
   text-align: center;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 0px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 5px 10px;
   text-align: left;
-  width: 270px;
+  /* width: 270px; */
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
